2004-11-27  David Malcolm  <david@davemalcolm.demon.co.uk>

	* Makefile.am: Removed tchoice.c

	* tchoice.c: Removed; this is very dead code from years ago!

	* cong-dispspec-element.c: Removed NEW_LOOK macro and the unused
	old look code since it doesn't compile and I don't plan to revive
	it.

	* cong-overview-view.c: ditto

	* cong-dispspec.h: ditto

	* cong-dispspec.c: ditto

	* cong-dispspec-element.h: ditto

	* global.h: ditto, plus removed the unsued isblank macro

2004-11-25  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-debug-log-view.c: Removed dead code (#145096)

2004-11-22  David Malcolm  <dmalcolm@redhat.com>

	* plugin-random.c: 

	Correct "lore ipsum" to "Lorem ipsum..." etc; getting hopefully the
	standard fragment of latin text for doing dummy text; copied from
	http://lipsum.com/

2004-11-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-table.c: 

	Refinements to the plugin: supplied better boilerplate for the 3
	editor area subclasses; <tgroup>, <row> and <entry> elements now
	appear respectively as red, green and blue dashed boxes.

2004-11-15  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-object.c: 

	Removed unnecessary debug string from translations

	* Makefile.am, cong-fake-plugin-hooks.c, cong-fake-plugin-hooks.h,
	plugin-table.c: 

	Added new plugin, to deal with DocBook tables (eventually).
	Currently displays the various elements as paragraphs.

	* cong-editor-node-comment.c, cong-editor-node-document.c,
	cong-editor-node-dtd.c, cong-editor-node-element-structural.c,
	cong-editor-node-element-unknown.c,
	cong-editor-node-entity-decl.c, cong-editor-node-entity-ref.c,
	cong-editor-node-text.c, cong-editor-node-unimplemented.c,
	cong-editor-node.h, cong-object.h,
	plugin-admonition-node-element.c,
	plugin-lists-node-element-listitem.c:

	Fixed the GObject boilerplate macros to allow more than one
	CongEditorNode subclass to be declared/defined within a single
	source file.
